Manifests/Smart Home/wyoming-whipser.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wyoming-whisper
  labels:
    app.kubernetes.io/name: wyoming-whisper
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: wyoming-whisper
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wyoming-whisper
    spec:
      containers:
        - name: wyoming-whisper
          image: "rhasspy/wyoming-whisper:latest"
          imagePullPolicy: Always
          ports:
            - name: 
              containerPort: 
              protocol: 
          volumeMounts:
            - name: 
              mountPath: 
            - name: 
          livenessProbe:
            tcpSocket:
              port: 
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 60
          readinessProbe:
            tcpSocket:
              port: 
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 60
          startupProbe:
            tcpSocket:
              port: 
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: 
          persistentVolumeClaim:
            claimName: 
        - name: 
          persistentVolumeClaim:
            claimName:
        - name: 
          configMap:
            name: wyoming-whisper-base-config
